# voice-equalizer

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
tuning/: __init__.py  presets.py
voice_equalizer/: __init__.py  __main__.py  config.py  presets.py  processing.py  tuner.py  viewer.py
